# marathi_sent

./: .gitignore  LICENSE  README.md  main.ipynb  main.py  pyproject.toml
dataset/preprocess/: test.csv  val.csv
