[project]
name = "marathi-sent"
version = "0.1.0"
description = "Perform Sentiment Analysis on Marathi dataset."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.2",
    "keras>=3.11.3",
    "mahanlp>=0.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "tensorflow-keras>=0.1",
    "tokenizers>=0.22.1",
    "tqdm>=4.67.1",
]
